ketbra now matches braket. Spacing scaling is not perfect, but pretty close

--- a/QoMath/qomath.sty
+++ b/QoMath/qomath.sty
@@ -88,20 +88,48 @@
     \fi
   \fi
 }
-\newcommand{\ketbra}[2]{		%ketbra, scaling to the larger of the arguments
+
+\newcommand{\ketbra}[3][\@nil]{		%braket, scaling to the larger of the arguments
 	\newdimen\lheight
-	\setbox0=\hbox{\ensuremath{#1}}
+	\setbox0=\hbox{\ensuremath{#2}}
 	\lheight=\ht0
 	\advance\lheight by \dp0
 	\newdimen\rheight
-	\setbox0=\hbox{\ensuremath{#2}}
+	\setbox0=\hbox{\ensuremath{#3}}
 	\rheight=\ht0
 	\advance\rheight by \dp0
-	\ifdim\lheight>\rheight
-		\lrpipe{\mathopen{}\left.\mathopen{}\left.\!{#1}\right>\!\right<{#2}}
-	\else
-		\lrpipe{{#1}\mathopen{}\left>\!\mathopen{}\left<{#2}\right.\right.\!}
-	\fi
+  \def\tmp{#1}%
+  \ifx\tmp\@nnil
+    % No optional argument was passed, proceed with <a|b>
+  	\ifdim\lheight>\rheight
+  		\ensuremath{\mathopen{}\left\rangle\mathopen{}\left.{#2}\mspace{1.75mu}\right|\mathclose{}\mspace{1.75mu}{#3}\mspace{1.75mu}\right\langle\mathclose{}}
+  	\else
+  		\ensuremath{\mathopen{}\left\rangle\mspace{1.75mu}{#2}\mspace{1.75mu}\mathopen{}\left|\mspace{1.75mu}{#3}\right.\mathclose{}\right\langle\mathclose{}}
+  	\fi
+  \else
+    % Optional argument was passed, proceed with <a|H|b>
+  	\newdimen\mheight
+  	\setbox0=\hbox{\ensuremath{#1}}
+  	\mheight=\ht0
+  	\advance\mheight by \dp0
+    \ifdim\lheight>\mheight
+      \ifdim\lheight>\rheight
+        % Left is largest
+      \ensuremath{\mathopen{}\left\rangle \mathopen{}\left. \mathopen{}\left. #2 \right|\mathclose{} #1 \right|\mathclose{} #3 \mspace{1.75mu}\right\langle\mathclose{}}
+      \else
+        % Right is largest
+        \ensuremath{\mathopen{}\left\rangle \mspace{1.75mu} #2 \mathopen{}\left| #1 \mathopen{}\left| #3 \right.\mathclose{} \right.\mathclose{}\right\langle\mathclose{}}
+      \fi
+    \else
+      \ifdim\mheight>\rheight
+        % Middle is largest
+        \ensuremath{\mathopen{}\left\rangle \mspace{1.75mu} #2 \mathopen{}\left|\mathopen{}\left. \mspace{-0.875mu}#1 \right|\mathclose{}\right.\mathclose{} #3 \mspace{0.875mu}\right\langle\mathclose{}}
+      \else
+        % Right is largest
+        \ensuremath{\mathopen{}\left\rangle \mspace{1.75mu} #2 \mathopen{}\left| #1 \mathopen{}\left| #3 \right.\mathclose{} \right.\mathclose{}\right\langle\mathclose{}}
+      \fi
+    \fi
+  \fi
 }
 
 \newcommand{\st}{\textsuperscript{st}}		%ordinal shortcuts, for use in math environment and inline text
