--- a/QoMath/qomath.sty
+++ b/QoMath/qomath.sty
@@ -4,50 +4,60 @@
 \RequirePackage{amsmath}
 \RequirePackage{amssymb}
 
-\let\thorn\th						%renaming a command that would otherwise be replaced
+% Renaming a command that would otherwise be replaced
+\let\thorn\th
 
-% Dimensions
+% Dimension declarations
 \newdimen\mheight
 \newdimen\lheight
 \newdimen\rheight
 
-\newcommand{\uvec}[1]{\hat{x}}			%unit vector in the style of the normal \vec command
+% Unit vector in the style of the normal \vec command
+\newcommand{\uvec}[1]{\hat{#1}}
+\newcommand{\vecb}[1]{\mathbf{#1}}		% Bold style \vec and \uvec commands
+\newcommand{\uvecb}[1]{\mathbf{\hat{{#1}}}}
 
-%\renewcommand{\vec}[1]{\mathbf{#1}}		%bold style \vec and \uvec commands to be implemented as an option with the package later
-%\newcommand{\uvec}[1]{\mathbf{\hat{{#1}}}}
-
-\newcommand{\diverge}{\nabla\cdot}			%common uses of the nabla sybol
-\newcommand{\curl}{\nabla\times}
+% Common uses of the nabla sybol
+\newcommand{\diverge}{\vec{\nabla}\cdot}
+\newcommand{\curl}{\vec{\nabla}\times}
 \newcommand{\laplace}{\nabla^2}
 
-\newcommand{\real}{\mathbb{R}}			%number sets notation
+% Number sets notation
+\newcommand{\real}{\mathbb{R}}
 \newcommand{\complex}{\mathbb{C}}
 \newcommand{\integer}{\mathbb{Z}}
-\newcommand{\nat}{\mathbb{N}}				%\natural conflicts with an existing LaTeX symbol
+\newcommand{\nat}{\mathbb{N}}		% \natural conflicts with an existing LaTeX symbol
 \newcommand{\rational}{\mathbb{Q}}
 \newcommand{\irrational}{\mathbb{I}}
 
-\newcommand{\inver}[1]{\frac{1}{{#1}}}								%derivatives, partial derivatives and reciprocals (oh my!)
+% Derivatives, partial derivatives and reciprocals (oh my!)
+\newcommand{\inver}[1]{\frac{1}{{#1}}}
 \newcommand{\deriv}[3][]{\frac{\text{d}^{#1}{#2}}{\text{d}{#3}^{#1}}}
 \newcommand{\dderiv}[3]{\frac{\text{d}^2{#1}}{\text{d}{#2}\,\text{d}{#3}}}
 \newcommand{\pderiv}[3][]{\frac{\partial^{#1}{#2}}{\partial{#3}^{#1}}}
 \newcommand{\ppderiv}[3]{\frac{\partial^2 {#1}}{\partial {#2}\,\partial {#3}}}
+\newcommand{\Deriv}[3][]{\frac{\text{D}^{#1}{#2}}{\text{D}{#3}^{#1}}}
+\newcommand{\DDeriv}[3]{\frac{\text{D}^2{#1}}{\text{D}{#2}\,\text{D}{#3}}}
 
-\newcommand{\lrbracket}[1]{\mathopen{}\left({#1}\right)}	%[l]eft-[r]ight [bracket]s
-\newcommand{\lrsquare}[1]{\mathopen{}\left[{#1}\right]}	%^^
-\newcommand{\lrbrace}[1]{\mathopen{}\left\{{#1}\right\}}	%^^
-\newcommand{\lrangle}[1]{\mathopen{}\left\langle{#1}\right\rangle}	%^^
-\newcommand{\lrpipe}[1]{\mathopen{}\left|{#1}\right|}		%^^
-\newcommand{\rlangle}[1]{\mathopen{}\left\rangle{#1}\right\langle}	%inward pointing version of \lrangle
+% Bracket pairs
+\newcommand{\lrbracket}[1]{\mathopen{}\left({#1}\right)}		% [l]eft-[r]ight [bracket]s
+\newcommand{\lrsquare}[1]{\mathopen{}\left[{#1}\right]}
+\newcommand{\lrbrace}[1]{\mathopen{}\left\{{#1}\right\}}
+\newcommand{\lrangle}[1]{\mathopen{}\left\langle{#1}\right\rangle}
+\newcommand{\lrpipe}[1]{\mathopen{}\left|{#1}\right|}
+\newcommand{\rlangle}[1]{\mathopen{}\left\rangle{#1}\right\langle}		% Inward pointing version of \lrangle
 
-\newcommand{\ullimit}[2]{^{^{#2}}_{_{#1}}}	%Integrals, [u]pper-[l]ower [limit]s (from 1st argument to 2nd argument)
+% Integrals, [u]pper-[l]ower [limit]s (from 1st argument to 2nd argument)
+\newcommand{\ullimit}[2]{^{^{#2}}_{_{#1}}}
 \newcommand{\limint}[2]{\int\ullimit{#1}{#2}}
 \newcommand{\fullint}[4]{\limint{#1}{#2}\!{#3}\,\text{d}{#4}}
 
-\newcommand{\bra}[1]{\mathopen{}\left\langle\mathopen{}\left.\!{#1}\right|\right.\!}		%bra and ket
+% bra and ket
+\newcommand{\bra}[1]{\mathopen{}\left\langle\mathopen{}\left.\!{#1}\right|\right.\!}
 \newcommand{\ket}[1]{\mathopen{}\left.\!\mathopen{}\left|{#1}\right.\!\right\rangle}
 
-\newcommand{\braket}[3][\@nil]{		%braket, scaling to the larger of the arguments, with a third optional argument for the inner operator.
+% braket, scaling to the larger of the arguments, with a third optional argument for the inner operator.
+\newcommand{\braket}[3][\@nil]{
 	\setbox0=\hbox{\ensuremath{#2}}
 	\lheight=\ht0
 	\advance\lheight by \dp0
@@ -91,7 +101,8 @@
 	\fi
 }
 
-\newcommand{\ketbra}[3][\@nil]{		%ketbra, scaling to the larger of the arguments
+% ketbra, scaling to the larger of the arguments, with a third optional argument for the inner operator.
+\newcommand{\ketbra}[3][\@nil]{
 	\setbox0=\hbox{\ensuremath{#2}}
 	\lheight=\ht0
 	\advance\lheight by \dp0
@@ -102,15 +113,11 @@
 	\ifx\tmp\@nnil
 		% No optional argument was passed, proceed with |a><b|
 		\ifdim\lheight>\rheight
-			%Boring non-touching version
+			% Left is tallest
 			\ensuremath{\mathopen{}\left|\mathopen{}\left.\left.{#2}\mspace{1.75mu}\right\rangle\right\langle\mathclose{}\mspace{1.75mu}{#3}\mspace{1.75mu}\right|\mathclose{}}
-			%Sick-nasty touching version
-			%\ensuremath{\mathopen{}\left|\mathopen{}\left.\left.{#2}\mspace{1.75mu}\right\rangle\mspace{-4.8mu}\right\langle\mathclose{}\mspace{1.75mu}{#3}\mspace{1.75mu}\right|\mathclose{}}
 		\else
-			%Virgin non-touching version
+			% Right is tallest
 			\ensuremath{\mathopen{}\left|\mspace{1.75mu}{#2}\mspace{1.75mu}\mathopen{}\left\rangle\left\langle\mspace{1.75mu}{#3}\right.\right.\mathclose{}\right|\mathclose{}}
-			%Chad touching version
-			%\ensuremath{\mathopen{}\left|\mspace{1.75mu}{#2}\mspace{1.75mu}\mathopen{}\left\rangle\mspace{-4.8mu}\left\langle\mspace{1.75mu}{#3}\right.\right.\mathclose{}\right|\mathclose{}}
 		\fi
 	\else
 		% Optional argument was passed, proceed with |a>H<b|
@@ -119,32 +126,46 @@
 		\advance\mheight by \dp0	
 		\ifdim\lheight>\mheight
 			\ifdim\lheight>\rheight
-				% Left is largest
+				% Left is tallest
 				\ensuremath{\mathopen{}\left| \mathopen{}\left. \mathopen{}\left. {#2} \right\rangle\mathclose{} {#1} \right\langle\mathclose{} {#3} \mspace{1.75mu}\right|\mathclose{}}
 			\else
-				% Right is largest
+				% Right is tallest
 				\ensuremath{\mathopen{}\left| \mspace{1.75mu} {#2} \mathopen{}\left\rangle {#1} \mathopen{}\left\langle {#3} \right.\mathclose{} \right.\mathclose{}\right|\mathclose{}}
 			\fi
 		\else
 			\ifdim\mheight>\rheight
-				% Middle is largest
+				% Middle is tallest
 				\ensuremath{\mathopen{}\left| \mspace{1.75mu} {#2} \mathopen{}\left\rangle\mathopen{}\left. \mspace{-0.875mu}{#1} \right\langle\mathclose{}\right.\mathclose{} {#3} \mspace{0.875mu}\right|\mathclose{}}
 			\else
-				% Right is largest
+				% Right is tallest
 				\ensuremath{\mathopen{}\left|\mspace{1.75mu} {#2} \mathopen{}\left\rangle {#1} \mathopen{}\left\langle {#3} \right.\mathclose{} \right.\mathclose{}\right|\mathclose{}}
 			\fi
 		\fi
 	\fi
 }
 
-\newcommand{\st}{\textsuperscript{st}}		%ordinal shortcuts, for use in math environment and inline text
+% Ordinal shortcuts, for use in math environment and inline text
+\newcommand{\st}{\textsuperscript{st}}
 \newcommand{\nd}{\textsuperscript{nd}}
 \newcommand{\rd}{\textsuperscript{rd}}
 \renewcommand{\th}{\textsuperscript{th}}
 
-\newcommand{\bigO}[1]{\text{O}\!\lrbracket{#1}}	%BIG O
+% BIG O
+\newcommand{\bigO}[1]{\text{O}\!\lrbracket{#1}}
 
-\newcommand{\eTo}[1]{e^{#1}}				%exponentials
-\newcommand{\eeTo}[1]{e\!^{^{#1}}}			%extra space for very large exponents
+% Exponentials
+\newcommand{\eTo}[1]{e^{#1}}
+\newcommand{\eeTo}[1]{e\!^{^{#1}}}		% Extra space for very large exponents
 
-\newcommand{\isotope}[3]{{}^{#2}_{#3}\text{#1}}
+% Isotope notation, optional argument for charge
+\newcommand{\isotope}[4][]{{}^{#3}_{#4}\text{#2}^{^{#1}}}
+
+% Shorthand for prime notation in it's typical use case
+\newcommand{\pr}{{}^\prime\,}
+
+% Evaluation shorthand
+\newcommand{\eval}[2]{\left.{#1}\right|_{#2}}
+
+% Column and row vectors
+\newcommand{\colvec}[1]{\ensuremath{\lrbracket{\begin{array}{c} #1 \end{array}}}}
+\newcommand{\rowvec}[2][c c]{\ensuremath{\lrbracket{\begin{array}{#1} #2 \end{array}}}}		% Defaults to 2 columns
